--- a/L10_2_of_3/L10_2_of_3.vcxproj.filters
+++ b/L10_2_of_3/L10_2_of_3.vcxproj.filters
@@ -15,13 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="L10(II).cpp">
+    <ClCompile Include="L10_2_of_3.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="data_sets.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
