--- a/L10_3_of_3/L10_3_of_3.vcxproj
+++ b/L10_3_of_3/L10_3_of_3.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b7341459-0480-4531-a07f-24f17bc88b85}</ProjectGuid>
-    <RootNamespace>L10II</RootNamespace>
+    <ProjectGuid>{5771406f-4812-4a1f-995a-0b95ec9d155e}</ProjectGuid>
+    <RootNamespace>L103of3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>L10_1_of_3</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,10 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="L10(II).cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="data_sets.h" />
+    <ClCompile Include="L10_3_of_3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
