--- a/SAOD_course_Yablonskas/SAOD_course_Yablonskas.vcxproj.filters
+++ b/SAOD_course_Yablonskas/SAOD_course_Yablonskas.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="SAOD_course_Yablonskas.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Stack.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="DynQueue.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Stack.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="DynQueue.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
