--- a/SAOD_course_Yablonskas/SAOD_course_Yablonskas.vcxproj
+++ b/SAOD_course_Yablonskas/SAOD_course_Yablonskas.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DynQueue.h" />
+    <ClInclude Include="menu.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
