--- a/SAOD_course_Yablonskas/SAOD_course_Yablonskas.vcxproj.filters
+++ b/SAOD_course_Yablonskas/SAOD_course_Yablonskas.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="DynQueue.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="menu.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
